<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
                android:id="@+id/feed_cv_orderingContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:id="@+id/feed_tv_orderHot"
                        style="@style/OrderingTheme"
                        android:text="@string/ordering_hot"
                        android:textColor="@color/ordering_selected"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/feed_tv_orderTop"
                        app:layout_constraintHorizontal_chainStyle="spread"/>

                <TextView
                        android:id="@+id/feed_tv_orderTop"
                        style="@style/OrderingTheme"
                        app:layout_constraintStart_toEndOf="@+id/feed_tv_orderHot"
                        app:layout_constraintEnd_toStartOf="@+id/feed_tv_orderControversial"
                        android:text="@string/ordering_top"/>

                <TextView
                        android:id="@+id/feed_tv_orderControversial"
                        style="@style/OrderingTheme"
                        app:layout_constraintStart_toEndOf="@+id/feed_tv_orderTop"
                        app:layout_constraintEnd_toStartOf="@+id/feed_tv_orderRising"
                        android:text="@string/ordering_controversial"/>

                <TextView
                        android:id="@+id/feed_tv_orderRising"
                        style="@style/OrderingTheme"
                        app:layout_constraintStart_toEndOf="@+id/feed_tv_orderControversial"
                        app:layout_constraintEnd_toStartOf="@+id/feed_tv_orderNew"
                        android:text="@string/ordering_rising"/>

                <TextView
                        android:id="@+id/feed_tv_orderNew"
                        style="@style/OrderingTheme"
                        app:layout_constraintStart_toEndOf="@+id/feed_tv_orderRising"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/ordering_new"/>

                <androidx.constraintlayout.widget.Group
                        android:id="@+id/feed_ordering_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:constraint_referenced_ids="feed_tv_orderHot, feed_tv_orderTop, feed_tv_orderControversial, feed_tv_orderRising, feed_tv_orderNew"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/feed_rv_posts"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/feed_cv_orderingContainer"
                app:layout_constraintBottom_toBottomOf="parent"
                android:alpha="0"/>

        <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/feed_lav_loading"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_fileName="loading_state.json"
                android:visibility="gone"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>